# Fracture

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check-and-lint.yml  rust.yml
fracture_client/: Cargo.toml
fracture_client/src/: main.rs
fracture_core/: Cargo.toml
fracture_core/src/: cli.rs  commands.rs  helpers.rs  ipfs_io.rs  lib.rs  main.rs
fracture_core/tests/: e2e.rs  threshold.rs
fracture_kfraas/: Cargo.toml
fracture_kfraas/src/: main.rs
fracture_kfraas/src/endpoints/: mod.rs
kfraas/: Cargo.toml
kfraas/src/: main.rs
kfraas/src/endpoints/: encrypt.rs  mod.rs
squ_core/: Cargo.toml
squ_core/src/: commands.rs  main.rs
squ_core/tests/: e2e.rs  threshold.rs
src/: cli.rs  commands.rs  ipfs_io.rs  lib.rs  main.rs  umbral.rs
tests/: threshold.rs
