[package]
name = "umbral_ipfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
ipfs-api-backend-hyper = "0.3"
tokio = { version = "1.16.1", features = ["full"] }
umbral-pre = "0.5.1"
