[package]
name = "fracture_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.11.9", features = ["multipart"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.16.1", features = ["full"] }
umbral-pre = "0.5.1"
