[package]
name = "fracture_kfraas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fracture_core = { path = "../fracture_core" }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.16.1", features = ["full"] }
umbral-pre = "0.5.1"
