[package]
name = "kfraas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
tokio = { version = "1.16.1", features = ["full"] }
squ_core = { path = "../squ_core" }
umbral-pre = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
